# moderncpp

./: .clang-format  .gitignore  LICENSE  README.md  configure.ac
src/: Makefile.am  cexpr-str.cpp  cexpr-str2.cpp  cls-basic.cpp  cls-log.cpp  cls-log.hpp  pp-basic.cpp
