#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([moderncpp], [0.0], [modercpp@no-email.no-ip.org])

AC_CONFIG_SRCDIR([src/pp-basic.cpp])
AC_CONFIG_HEADERS([config.hpp])

AM_INIT_AUTOMAKE([foreign 1.15])

# start check as C++
AC_LANG_PUSH([C++])

# Checks for programs.
AC_PROG_CXX

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# end check as C++
AC_LANG_POP([C++])

AC_CONFIG_FILES([Makefile
                 src/Makefile])
AC_OUTPUT
